tests/baselines/reference/parserForOfStatement18.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement18.ts(1,1): error TS9003: For...of statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement18.ts (1 errors) ====
    for (var of of of) { }
    ~~~
!!! error TS9003: For...of statements are not currently supported.